--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,25 @@ footer {
 	color: black;
 }
 
+#menuButtons {
+	height: 55px;
+    border: 1px solid lightgray;
+}
+
+#menuButtons button {
+    margin-top: 10px;
+}
+
 .content {
 	margin: 80px;
 }
 
 .tarjeta {
-	width: 500px;
+	width: 400px;
 	height: 200px;
 	background-color: #F5ECCE;
 	margin-left: 55px;
+	margin-top: 40px;
 	border: 1px solid gray;
 	border-radius: 5px;
 }
@@ -99,7 +109,16 @@ footer {
 }
 
 .title {
+	/*white-space: nowrap;
 	margin-top: 15px;
+	width: 390px;
+	text-overflow: ellipsis;
+	overflow: hidden;*/
+
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
 }
 .price {
 	margin-top: 10px;
@@ -113,4 +132,56 @@ footer {
 .select-numero {
     height: 30px;
     width: 50px;
+    margin-top: 24px
+}
+
+.seleccionar {
+	margin-top: 48px;
+    margin-left: 33px;
+}
+
+.pedido {
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+}
+
+hr {
+	background-color: #2E2E2E;
+}
+
+/*Mapa con marker*/
+
+.contacto {
+	margin: 95px;
+    margin-left: 195px;
+    margin-top: 120px;
+}
+
+.full-width {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+input[type="text"],
+	[type="email"],
+	[type="tel"] {
+
+	width: 300px;
+}
+
+.enviar {
+	width: 90px;
+    margin-left: 170px;
+    margin-top: 10px;
+}
+
+.form-group > label {
+	font-size: 17px;
+}
+
+.cajaMensaje {
+	margin-left: 63px;
+    width: 60%;
 }
